fixed content overflow

--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -1,5 +1,10 @@
 :host {
-    height: 100%;
+    min-height: 100vh;
+    max-height: 100vh;
     display: grid;
     grid-template-rows: auto 1fr auto;
+}
+
+.content {
+    overflow-y: scroll;
 }
